<resources>
    <string name="app_name">Botanical Bliss</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_on1">Learn Many Plants Species</string>
    <string name="text_on1">Let\'s learn about the many plant species that exist in this world</string>
    <string name="next">Next</string>
    <string name="title_on2">Read Many Articles About Plant</string>
    <string name="text_on2">Let\'s learn more about beautiful plants and read many articles about plants and gardening</string>
    <string name="start">Start</string>
    <string name="hello_florist">Hello Florist,</string>
    <string name="text_toolbar">Let’s Learn More About Plants</string>
    <string name="home">home</string>
    <string name="flowers">Flowers</string>
    <string name="articles">ARTICLES</string>
    <string name="top_articles">Top Articles</string>
    <string name="photography">Photography</string>
    <string name="description">DESCRIPTION</string>
    <string name="articless">Articles</string>
</resources>